tests/NormalTests/paczka1/small_fuzzy/45997835.err
Error in line 4: ?S8"7
Error in line 8: QNX4DK3 S206 88,=
Error in line 3: HL8eI0 S847 26,3
Error in line 11: QNX4DK3 S206 190,3
